# Nexusfi-contracts

./: .gitignore  temp.json
contracts/: Cargo.toml
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
contracts/factory/src/donation-contract/: token.wasm
contracts/token/: Cargo.toml
contracts/wasm_test/: Cargo.toml
factory/src/: lib.rs
factory/src/token/: token.wasm
tests/src/: lib.rs  token.rs
tests/tests/: test_basics.rs
token/: Cargo.toml  README.md
token/src/: lib.rs
