[package]
name = "token"
description = "Index Fund Token Contract with Pyth Price Feed Integration"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.5.0", default-features = false, features = ["env"] }
pyth-near = { git = "https://github.com/pyth-network/pyth-crosschain", branch = "main", features = ["library"] }
pythnet-sdk = { git = "https://github.com/pyth-network/pyth-crosschain", branch = "main" }
borsh = "0.9.3"
borsh-derive = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
thiserror = "1.0.38"

[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }
near-workspaces = { version = "0.14.1", features = ["unstable"] }
tokio = { version = "1.23.0", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.11.0-rust-1.82.0"
image_digest = "sha256:6af67e796ff7182f6b184031f9e95d792f97b66693698abc51b4630acac0bf83"
passed_env = []
container_build_command = ["cargo", "near", "build"]

[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", rev = "4ddeca4dbdba50e2cbf6e603242f8c75d9246e2a" }
